--- a/styles/main.css
+++ b/styles/main.css
@@ -42,6 +42,12 @@ main{
   color: #fff;
   font-weight: 600;
   font-size: 15px;
+  cursor: pointer;
+}
+
+.btn_dwnld:hover{
+  background-color: #fff;
+  color: rgba(48, 47, 47, 0.877);
 }
 
 
@@ -90,4 +96,9 @@ main{
   color: #fff;
   font-size: 16px;
   font-weight: 600;
+  cursor: pointer;
+}
+
+.btn_get_started:hover{
+  background-color: #f7af79;
 }
